[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/AbilityEffect.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/vpnParticle.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/area.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/starParticle.png" type="Texture" id=4]

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.246725, 0.371385 ), 0.0, 0.0, 0, 0, Vector2( 0.748908, 0.357872 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AbilityParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=16]
resource_name = "appear"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.520712, 3.40235, 3.88795 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.5, 1 ), Vector2( 0.5, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AbilityParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.8769 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.516373, 3.41537, 3.88795 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="CapsuleShape2D" id=17]
radius = 40.5414
height = 62.4863

[node name="AbilityEffect" type="Node2D"]
script = ExtResource( 1 )
ability_color = Color( 0.0862745, 0.67451, 0.854902, 0.45098 )
ability_key = "3"
ability_texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.215435, 32.4586 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 3 )

[node name="AbilityParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0.215435, 32.4586 )
amount = 7
lifetime = 2.0
lifetime_randomness = 0.34
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 40.0
direction = Vector2( 0, -1 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.3
angular_velocity = 10.0
angular_velocity_random = 1.0
scale_amount_curve = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "appear"
anims/RESET = SubResource( 15 )
anims/appear = SubResource( 16 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.215435, 32.4586 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -1 )
rotation = 1.5708
scale = Vector2( 1e-05, 1e-05 )
shape = SubResource( 17 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
